PROJECT No. 6 "Task Tracker". Part Three: New functionality has been added (saving tasks to a file format ".csv") and exception handling
Task verification iteration: 4
an additional task has been completed