@@ -6,6 +6,7 @@ import service.FileBackedTaskService;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -31,18 +32,21 @@ class FileBackedTaskManagerTest {
 
     @Test
     void shouldSaveAndLoadTasksCorrectly() {
-        // Test 2: Сохранение и загрузка задач
+        // Создаем задачи
         Task task1 = new Task("Task 1", "Description 1");
         Epic epic1 = new Epic(0, "Epic 1", "Description 1");
         SubTask subTask1 = new SubTask(0, "SubTask 1", "Description 1", Status.NEW, epic1);
 
+        // Добавляем задачи в менеджер
         manager.addTask(task1);
         manager.addEpic(epic1);
         manager.addSubTask(subTask1);
 
+        // Загружаем менеджер из файла
         FileBackedTaskService loadedManager = FileBackedTaskService.loadFromFile(tempFile);
         assertNotNull(loadedManager, "Ошибка: Менеджер не был загружен из файла.");
 
+        // Проверяем, что задачи успешно восстановились
         List<Task> tasks = loadedManager.getTasks();
         List<Epic> epics = loadedManager.getEpics();
         List<SubTask> subTasks = loadedManager.getSubTasks();
@@ -51,21 +55,31 @@ class FileBackedTaskManagerTest {
         assertEquals(1, epics.size(), "Ошибка: Счетчик Epic не соответствует");
         assertEquals(1, subTasks.size(), "Ошибка: Счетчик SubTask не соответствует");
 
-        Task loadedTask1 = tasks.getFirst();
-        Epic loadedEpic1 = epics.getFirst();
-        SubTask loadedSubTask1 = subTasks.getFirst();
+        // Проверяем восстановленные задачи
+        Task loadedTask1 = tasks.get(0);
+        Epic loadedEpic1 = epics.get(0);
+        SubTask loadedSubTask1 = subTasks.get(0);
 
+        // Проверка Task
         assertEquals(task1.getName(), loadedTask1.getName(), "Ошибка: Имя Task не совпадает");
         assertEquals(task1.getDescription(), loadedTask1.getDescription(), "Ошибка: Описание Task не совпадает");
         assertEquals(task1.getStatus(), loadedTask1.getStatus(), "Ошибка: Статус Task не совпадает");
 
+        // Проверка Epic
         assertEquals(epic1.getName(), loadedEpic1.getName(), "Ошибка: Имя Epic не совпадает");
         assertEquals(epic1.getDescription(), loadedEpic1.getDescription(), "Ошибка: Описание Epic не совпадает");
         assertEquals(epic1.getStatus(), loadedEpic1.getStatus(), "Ошибка: Статус Epic не совпадает");
 
+        // Проверка SubTask
         assertEquals(subTask1.getName(), loadedSubTask1.getName(), "Ошибка: Имя SubTask не совпадает");
         assertEquals(subTask1.getDescription(), loadedSubTask1.getDescription(), "Ошибка: Описание SubTask не совпадает");
         assertEquals(subTask1.getStatus(), loadedSubTask1.getStatus(), "Ошибка: Статус SubTask не совпадает");
         assertEquals(subTask1.getEpicId(), loadedSubTask1.getEpicId(), "Ошибка: Epic ID у SubTask не совпадает");
+
+        // Дополнительная проверка, что у эпика есть правильные подзадачи
+        Set<SubTask> epicSubTasks = loadedEpic1.getSubTasks();
+        assertEquals(1, epicSubTasks.size(), "Ошибка: Количество подзадач у эпика не совпадает");
+        assertTrue(epicSubTasks.contains(loadedSubTask1), "Ошибка: Подзадача не привязана к эпику корректно");
     }
+
 }
